cabal-version: >=1.10
name: arohi-config
version: 0.1.0
build-type: Simple

library
  exposed-modules: Arohi.Config
  ghc-options: -Wall
  default-language: Haskell2010
  build-depends: aeson
               , base
               , base64-bytestring
               , bytestring
               , containers
               , ghcjs-dom
               , text
