cabal-version: >=1.10
name: arohi-datasource-client
version: 0.1.0
build-type: Simple

library
  exposed-modules: Arohi.DataSource.Client
  ghc-options: -Wall
  default-language: Haskell2010
  build-depends: aeson
               , base
               , bytestring
               , constraints
               , constraints-extras
               , containers
               , jsaddle
               , arohi-datasource
               , reflex-dom
               , text