cabal-version: >=1.10
name: arohi-datasource-server
version: 0.1.0
build-type: Simple

library
  exposed-modules: Arohi.DataSource.Server
  ghc-options: -Wall
  default-language: Haskell2010
  build-depends: aeson
               , base
               , bytestring
               , constraints-extras
               , dependent-map
               , arohi-datasource
               , reflex-dom
               , websockets