cabal-version: >=1.10
name: arohi-route
version: 0.1.0
build-type: Simple

library
  hs-source-dirs: src
  exposed-modules: Arohi.Route
  ghc-options: -O2 -Wall -Werror
  default-language: Haskell2010
  build-depends: base
               , jsaddle
               , lens
               , primitive
               , ref-tf
               , reflex
               , reflex-dom
               , text
               , transformers