cabal-version: >=1.10
name: arohi-route
version: 0.1.0
build-type: Simple

library
  exposed-modules: Arohi.Route
  ghc-options: -Wall
  default-language: Haskell2010
  build-depends: base
               , jsaddle
               , lens
               , primitive
               , ref-tf
               , reflex
               , reflex-dom
               , text
               , transformers