cabal-version: >=1.10
name: reflex-datasource-client
version: 0.1.0
build-type: Simple

library
  hs-source-dirs: src
  exposed-modules: Reflex.DataSource.Client
  ghc-options: -O2 -Wall -Werror
  default-language: Haskell2010
  build-depends: aeson
               , base
               , bytestring
               , constraints
               , constraints-extras
               , containers
               , jsaddle
               , reflex-datasource
               , reflex-dom
               , text