cabal-version: >=1.10
name: reflex-datasource-server
version: 0.1.0
build-type: Simple

library
  hs-source-dirs: src
  exposed-modules: Reflex.DataSource.Server
  ghc-options: -O2 -Wall -Werror
  default-language: Haskell2010
  build-depends: aeson
               , base
               , bytestring
               , constraints-extras
               , dependent-map
               , reflex-datasource
               , reflex-dom
               , websockets