cabal-version: >=1.10
name: reflex-devserver
version: 0.1.0
build-type: Simple

library
  hs-source-dirs: src
  exposed-modules: Reflex.DevServer
  ghc-options: -O2 -Wall -Werror
  default-language: Haskell2010
  build-depends: async
               , base
               , http-types
               , jsaddle
               , jsaddle-warp
               , wai
               , wai-websockets
               , warp
               , websockets