cabal-version: >=1.10
name: reflex-route-server
version: 0.1.0
build-type: Simple

library
  hs-source-dirs: src
  exposed-modules: Reflex.Route.Server
  ghc-options: -O2 -Wall -Werror
  default-language: Haskell2010
  build-depends: aeson
               , base
               , bytestring
               , constraints
               , constraints-extras
               , containers
               , ghcjs-dom
               , jsaddle
               , jsaddle-dom
               , lens
               , network-uri
               , reflex-dom
               , reflex-route
               , text
               , transformers
               , wai