cabal-version: >=1.10
name: reflex-route-server
version: 0.1.0
build-type: Simple

library
  hs-source-dirs: src
  exposed-modules: Reflex.Route.Server
  ghc-options: -O2 -Wall -Werror
  default-language: Haskell2010
  build-depends: base
               , bytestring
               , network-uri
               , reflex-dom
               , reflex-route
               , text
               , wai